<resources>
    <string name="app_name">Weather</string>
    <string name="location_placeholder">Loading Location…</string>
    <string name="temperature_placeholder">~</string>
    <string name="info_placeholder">-</string>
    <string name="sunrise_text">Sunrise</string>
    <string name="sunset_text">Sunset</string>
    <string name="temp_min">Min</string>
    <string name="temp_max">Max</string>
    <string name="condition_description">Condition Image</string>
    <string name="sunrise_description">Sunrise Image</string>
    <string name="sunset_description">Sunset Image</string>
    <string name="temp_min_description">Minimum temperature Image</string>
    <string name="temp_max_description">Maximum temperature Image</string>
</resources>